syntax="proto3";

package protobuf;

service ManageBill{
    rpc SearchBill(SearchBillRequest) returns (stream SearchBillRespone){};
    rpc CreateBill(CreateBillRequest) returns (CreateBillRespone){};
}

message SearchBillRequest{
    int64 BillId = 1;
    int64 BillStatus = 2;
    int64 ItemId = 3;
    int64 Amount = 4;
    int64 CustomerId = 5;
    string CustomerPhone = 6;
    string BillDesc = 7;
    string ItemName = 8;
    string CustomerName = 9;    
}

message SearchBillRespone{
    int64 BillId = 1;
    int64 BillStatus = 2;
    int64 ItemId = 3;
    int64 Amount = 4;
    int64 CustomerId = 5;
    string CustomerPhone = 6;
    string BillDesc = 7;
    string ItemName = 8;
    string CustomerName = 9;    
}

message CreateBillRequest{
    int64 ItemId = 3;
    int64 Amount = 4;
    int64 CustomerId = 5;
    string BillDesc = 7; 
}

message CreateBillRespone{
    int64 IsSaved = 1;
}
